--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ matrix:
         - SAUCE_USERNAME=elia
         # SAUCE_ACCESS_KEY:
         - secure: GT13SjzU8vmqKIyY2LAXje+ndqevTsX/w71JkZHRLTrDUl0qcIod7xsfahbzGt2gOZPYZUkKiVaPoUenhc/YeJ2jTJVHeHY9UEl2II+3tOtuvp2jLadA//aBbsB6/09d7lIZMzpa93TL2R/SncPxugYW9v2o8o8Lwd2iIzowT/g=
+      before_install:
+        - eval travis_start_sauce_connect
 
     - rvm: 2.4.0
       env: RUN=jshint
@@ -55,7 +57,7 @@ matrix:
     - rvm: 2.0.0
       env: RUN="rspec mspec_opal_nodejs" RACK_VERSION='< 2.0'
 
-    - rvm: jruby-9.1.6.0
+    - rvm: jruby-9.1.7.0
       env: RUN=rspec
 
     - rvm: jruby-head
@@ -86,5 +88,5 @@ notifications:
     urls:
       - https://webhooks.gitter.im/e/2ea12333adebda0c2289
 
-addons:
-  sauce_connect: true
+# addons:
+#   sauce_connect: false
